--- a/trading/package.json
+++ b/trading/package.json
@@ -23,6 +23,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "nodemailer": "^7.0.6",
     "nodemon": "^2.0.7",
     "npm": "^11.6.0",
     "redis": "^5.8.2"
