--- a/user/.env.prod
+++ b/user/.env.prod
@@ -1,4 +1,4 @@
-APP_SECRET ='User_Service_secret'
+APP_SECRET ='trading_Service_secret'
 
 # Mongo DB
 MONGODB_URI='mongodb://127.0.0.1:27017/trading_platform'
@@ -7,15 +7,8 @@ MSG_QUEUE_URL='amqp://rabbitmq:5672'
 
 EXCHANGE_NAME='ONLINE_STORE'
 
-# SMPT USER
-SMTP_USER="vishnucodewise@gmail.com"
-SMTP_PASS="tgdotylvbmdevots"
-
-
 # Redis
 REDIS_URL='redis://localhost:6379'
 
 # Port
 PORT=8002
-
-
