fix: update paths for user and trading services in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
     - uses: actions/setup-node@v4
       with: { node-version: 18 }
     - run: npm ci --workspaces=false  # Root
-    - run: cd user-service && npm ci && npm test
-    - run: cd trading-service && npm ci && npm test
+    - run: cd user && npm ci && npm test
+    - run: cd trading && npm ci && npm test
     - name: Build Docker
-      run: docker build -t user-service ./services/user-service
+      run: docker build -t user .user
     - name: Deploy to AWS  # Stub: Use AWS actions for ECR/ECS
       if: github.ref == 'refs/heads/main'
       uses: aws-actions/configure-aws-credentials@v4
