--- a/trading/.env.prod
+++ b/trading/.env.prod
@@ -1,7 +1,8 @@
 APP_SECRET ='User_Service_secret'
 
 # Mongo DB
-MONGODB_URI='mongodb://127.0.0.1:27017/trading_platform'
+# MONGODB_URI='mongodb://127.0.0.1:27017/trading-system-trad'
+MONGODB_URI="mongodb+srv://vishnu:3vSNawPR5rmfOxFe@cluster0.qgvc6.mongodb.net/trading-system-trad?retryWrites=true&w=majority&appName=Cluster0"
 
 MSG_QUEUE_URL='amqp://rabbitmq:5672'
 
